# yo

./: .gitignore  LICENSE  Makefile  README.md  TESTING.md  THE-PIVOT-GITHUB.md  THE-PLAN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-binary.sh
src/dotyo/: __init__.py  __main__.py  banner.py  cli.py  network.py
src/dotyo/commands/: doctor.py  login.py  mcp_cmd.py  repl.py
src/dotyo/lib/: api.py  cc_creds.py  config.py  skill_install.py
src/dotyo/skills/dotyo-network/: SKILL.md
src/dotyo/tui/: __init__.py  app.py
src/dotyo/tui/screens/: drop.py  find.py  home.py  picker.py
src/dotyo/tui/widgets/: banner.py  chat_log.py  status_bar.py
